--- a/modules.html
+++ b/modules.html
@@ -15,6 +15,15 @@
   {
     margin-left: 20px;
   }
+  @media(max-width:991px)
+  {
+     .affix
+      {
+       position: static;
+       width: auto;
+       top: 0;
+      }
+  }
   </style>
 </head>
 
