Navbar fixed to top of screen.

--- a/modules.html
+++ b/modules.html
@@ -24,13 +24,17 @@
        top: 0;
       }
   }
+  body
+  {
+    margin-top: 60px;
+  }
   </style>
 </head>
 
 <body data-spy="scroll" data-target="#module-navigation">
 <div class="container">
 <!-- Header -->
-<nav class="navbar navbar-default" role="navigation">
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
   <!-- Brand and toggle get grouped for better mobile display -->
   <div class="navbar-header">
     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
