--- a/modules.html
+++ b/modules.html
@@ -48,7 +48,9 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="#">[Prototype] School Redistricting</a>
+    <a class="navbar-brand" href="index.html">
+      <img src="images/distictly.png">
+    </a>
   </div>
   <div class="collapse navbar-collapse navbar-ex1-collapse">
     <ul class="nav navbar-nav">
