a few more changes

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="assets/ico/redist.png">
 
-    <title>Redistricting Toolkit</title>
+    <title>Districtly: School Redistricting Toolkit</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
