--- a/modules.html
+++ b/modules.html
@@ -2,7 +2,8 @@
 <html lang="en">
 
 <head>
-  <title>[Prototype] School Redistricting - Modules</title>
+  <link rel="shortcut icon" href="assets/ico/redist.png">
+  <title>Districtly</title>
 
   <!-- Core Bootstrap -->
   <link href="./css/bootstrap.css" rel="stylesheet">
