made some more changes to the landing page
im modeling this off of a friends website -- it can be changed but im
just throwing some ideas out there

--- a/index.html
+++ b/index.html
@@ -71,8 +71,9 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
-        <h3>Redistricting made simple</h3>
-        <p>This is a template for a simple marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+        <h1>Redistricting made simple</h1>
+        <p>Never again does school redistricting have to be a process done behind closed doors.
+          Districtly provides you with all the tools you need to get involved with your county's school redistricting. </p>
         <p><a class="btn btn-primary btn-lg" href="modules.html">Quick Start &raquo;</a></p>
       </div>
     </div>
@@ -81,17 +82,17 @@
       <!-- Example row of columns -->
       <div class="row">
         <div class="col-lg-4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#">View details &raquo;</a></p>
+          <h2>Data Templates</h2>
+          <p>Districtly provides data templates to help you collect your data and know what data is most useful.</p>
+          <p><a class="btn btn-default" href="#">View Data Templates &raquo;</a></p>
         </div>
         <div class="col-lg-4">
-          <h2>Heading</h2>
+          <h2>Another thing we'll have</h2>
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
           <p><a class="btn btn-default" href="#">View details &raquo;</a></p>
        </div>
         <div class="col-lg-4">
-          <h2>Heading</h2>
+          <h2>And another!</h2>
           <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
           <p><a class="btn btn-default" href="#">View details &raquo;</a></p>
         </div>
@@ -100,7 +101,7 @@
       <hr>
 
       <footer>
-        <p>&copy; Company 2013</p>
+        <p>&copy; Fighting Mongooses 2013</p>
       </footer>
     </div> <!-- /container -->
 
