updated some stuff

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="assets/ico/redist.png">
 
-    <title>Districtly: School Redistricting Toolkit</title>
+    <title>Districtly: A School Redistricting Toolkit</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -71,10 +71,10 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
-        <h1>Redistricting made simple</h1>
-        <p>Never again does school redistricting have to be a process done behind closed doors.
-          Districtly provides you with all the tools you need to get involved with your county's school redistricting. </p>
-        <p><a class="btn btn-primary btn-lg" href="modules.html">Quick Start &raquo;</a></p>
+        <h1>Rethink redistricting</h1>
+        <p>School redistricting does not have to be a process done behind closed doors.
+          Districtly provides you with all the tools you need to get involved with your community's school redistricting. </p>
+        <p><a class="btn btn-primary btn-lg" href="modules.html">Get Started &raquo;</a></p>
       </div>
     </div>
 
