--- a/modules.html
+++ b/modules.html
@@ -3,7 +3,7 @@
 
 <head>
   <link rel="shortcut icon" href="assets/ico/redist.png">
-  <title>Districtly</title>
+  <title>Districtly: A School Redistricting Toolkit</title>
 
   <!-- Core Bootstrap -->
   <link href="./css/bootstrap.css" rel="stylesheet">
