--- a/index.html
+++ b/index.html
@@ -82,17 +82,17 @@
       <!-- Example row of columns -->
       <div class="row">
         <div class="col-lg-4">
-          <h2>Data Templates</h2>
-          <p>Districtly provides data templates to help you collect your data and know what data is most useful.</p>
+          <h3>Example Data Collections</h3>
+          <p>Districtly shows you example data that show you exactly what data you should be looking for.</p>
           <p><a class="btn btn-default" href="#">View Data Templates &raquo;</a></p>
         </div>
         <div class="col-lg-4">
-          <h2>Another thing we'll have</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+          <h3>Data Templates</h3>
+          <p>Districtly provides data templates to help you collect your data, so you do not have to spend time creating useful forms from scratch.</p>
           <p><a class="btn btn-default" href="#">View details &raquo;</a></p>
        </div>
         <div class="col-lg-4">
-          <h2>And another!</h2>
+          <h3>Another awesome thing!</h3>
           <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
           <p><a class="btn btn-default" href="#">View details &raquo;</a></p>
         </div>
