--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
+            <li class="active"><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
             <li><a href="#contact">Contact</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
@@ -82,9 +82,9 @@
       <!-- Example row of columns -->
       <div class="row">
         <div class="col-lg-4">
-          <h3>Example Data Collections</h3>
-          <p>Districtly shows you example data that show you exactly what data you should be looking for.</p>
-          <p><a class="btn btn-default" href="#">View Data Templates &raquo;</a></p>
+          <h3>About School Redistricting</h3>
+          <p>What is school redistricting and how does it <br>affect you ?</p>
+          <p><a class="btn btn-default" href="about.html">View details &raquo;</a></p>
         </div>
         <div class="col-lg-4">
           <h3>Data Templates</h3>
@@ -92,9 +92,9 @@
           <p><a class="btn btn-default" href="#">View details &raquo;</a></p>
        </div>
         <div class="col-lg-4">
-          <h3>Another awesome thing!</h3>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-default" href="#">View details &raquo;</a></p>
+          <h3>Success Stories</h3>
+          <p>Read about people who have successfully contributed to improve their district's redistricting plans</p>
+          <p><a class="btn btn-default" href="successful.html">View details &raquo;</a></p>
         </div>
       </div>
 
