Added templates page, added content on the modules, cross linking on all pages

--- a/modules.html
+++ b/modules.html
@@ -54,8 +54,8 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
             <li><a href="#contact">Contact</a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
@@ -111,22 +111,19 @@
 <div class="col-md-9">
   <article id="overview">
     <h1>Redistricting Modules Portal</h1>
-    <p class="lead">Here are the basics, yo.</p>
+    <p class="lead">These steps are designed to guide you through the process of preparing an effective redistricting proposal for your school district. Use the navigation pane on the left to aceess details and resources for each step</p>
   </article>
   <article id="goal-formation-and-clarification">
     <h1>Goal Formation and Clarification</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In interdum cursus tellus, at cursus nunc faucibus et. Nulla facilisi. Ut id porttitor libero. Sed sagittis sodales lorem, eget aliquet velit condimentum ut. Aliquam erat volutpat. Nam nisl lacus, feugiat vel augue sit amet, dapibus varius justo. Nam at pellentesque leo.</p>
-    <p>Curabitur non arcu tincidunt, luctus lacus id, gravida eros. Sed ullamcorper dolor venenatis, accumsan dui id, pellentesque mauris. Phasellus elementum tellus quam, id luctus est imperdiet a. Vivamus vitae laoreet arcu, nec pharetra mauris. In scelerisque accumsan nibh, ac gravida massa fermentum ut. Proin enim leo, mollis ac massa ut, iaculis condimentum augue. Vivamus in facilisis ante, sit amet facilisis eros.</p>
+    <p>It is important to set clear goals for your endeavor, begin by thinking anout why you are dissatisfied with the current redistricting plan and what are the key things you would like to change about it. You may want to talk to your neighbours and arrive at a common set of goals for your neighbourhood. Some possible goals might be: Making sure the school is within a certain radius from your home or that the school has a good science lab</p>
   </article>
   <article id="current-model-analysis">
     <h1>Current Model Analysis</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In interdum cursus tellus, at cursus nunc faucibus et. Nulla facilisi. Ut id porttitor libero. Sed sagittis sodales lorem, eget aliquet velit condimentum ut. Aliquam erat volutpat. Nam nisl lacus, feugiat vel augue sit amet, dapibus varius justo. Nam at pellentesque leo.</p>
-    <p>Curabitur non arcu tincidunt, luctus lacus id, gravida eros. Sed ullamcorper dolor venenatis, accumsan dui id, pellentesque mauris. Phasellus elementum tellus quam, id luctus est imperdiet a. Vivamus vitae laoreet arcu, nec pharetra mauris. In scelerisque accumsan nibh, ac gravida massa fermentum ut. Proin enim leo, mollis ac massa ut, iaculis condimentum augue. Vivamus in facilisis ante, sit amet facilisis eros.</p>
+	<p>Before you can begin to devise an alternative it is important that you have a strong understanding of the current plan. The best way to do this is collecting all the available documents from your school board, this is usually possible through your district board's website.....</p>
   </article>
   <article id="data-collection">
     <h1>Data Collection</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In interdum cursus tellus, at cursus nunc faucibus et. Nulla facilisi. Ut id porttitor libero. Sed sagittis sodales lorem, eget aliquet velit condimentum ut. Aliquam erat volutpat. Nam nisl lacus, feugiat vel augue sit amet, dapibus varius justo. Nam at pellentesque leo.</p>
-    <p>Curabitur non arcu tincidunt, luctus lacus id, gravida eros. Sed ullamcorper dolor venenatis, accumsan dui id, pellentesque mauris. Phasellus elementum tellus quam, id luctus est imperdiet a. Vivamus vitae laoreet arcu, nec pharetra mauris. In scelerisque accumsan nibh, ac gravida massa fermentum ut. Proin enim leo, mollis ac massa ut, iaculis condimentum augue. Vivamus in facilisis ante, sit amet facilisis eros.</p>
+	<p>Data collection is one of the most crucial and time consuming part of this process. Begin by perusing some of the <a href="templates.html">templates</a> we have prepared to aid you in this process. These templates are meant to serve as a way to help you decide what sort of data you will need to come up with and present a strong case for your proposal</p>
   </article>
   <article id="creating-the-redistricting-alternatives">
     <h1>Creating the Redistricting Alternatives</h1>
