--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       <hr>
 
       <footer>
-        <p>&copy; Fighting Mongooses 2013</p>
+        <p>&copy; Fighting Mongooses (Georgia Institute of Technology) 2013</p>
       </footer>
     </div> <!-- /container -->
 
