added module pages

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <div class="col-lg-4">
           <h3>Data Templates</h3>
           <p>Districtly provides data templates to help you collect your data, so you do not have to spend time creating useful forms from scratch.</p>
-          <p><a class="btn btn-default" href="#">View details &raquo;</a></p>
+          <p><a class="btn btn-default" href="templates.html">View details &raquo;</a></p>
        </div>
         <div class="col-lg-4">
           <h3>Success Stories</h3>
