goal formation and clarification mostly done

--- a/goal.html
+++ b/goal.html
@@ -123,10 +123,52 @@
           <li>Secondary Criteria</li>
         </ul>
     </ul>
-    <h4>Goals</h4>
-    <h4>Criteria</h4>
+    <h3>Goals</h3>
+      <p>
+        Goals are one of the most important things to consider before you decide to start creating your redistricting alternative. Think about what you want your main goals to be and what you want your plan to accomplish. For example, think about whether or not you want to minimize the number of families affected by the redistricting, or if you really want to minimize traffic. 
+      </p>
+      <p>
+        If you are a parent who has decided to participate in the redistricting process, effective ways to formulate your goals are to ask yourself questions about what you think will be good for your student and your community. For example, are you okay with your child's school percent utilization remaining slightly increased if that meant reducing the number of affected students by 100 or more? What about if your child is no longer in the district of the school within walking distance? What about if your child may have classes in trailers in order to stay at their current school? These are all questions you must ask if you are okay with because yours and many other students will be affected by the answers to these questions.
+      </p>
+      <p>
+        These goals will be your main driving force that you should use as you consider your data collected and calculations on the data. Examples of goals used in past redistricting processes are below. 
+      </p>
+      <ul>
+        <li>Reducing the Number of Students the Plan Impacts</li>
+        <li>Utilizing Local Boundaries</li>
+        <li>Minimize Traffic</li>
+        <li>Consider Geographical Proximity</li>
+      </ul>
+      <p>
+        <b>Please note:</b> many of the examples we will provide were created with the main goal of reducing the number of students affected by redistricting so many of the document templates included in the modules are formatted as such.
+      </p>
+    <h3>Criteria</h3>
+      <p>
+        When deciding to create a redistricting alternative, one of the first things that must be done is determine your criteria for your alternative district maps. These criteria should also include your city or counties criteria, as that will make it more persuasive when presenting the final version to your local school board. Feel free to add your own criteria as well, especially if it is criteria you feel will lead to better overall redistricting plans.
+      </p>
     <h5>Primary Criteria</h5>
+      <p>
+        Primary criteria are the pivotal criteria you want to follow when creating a redistricting alternative. Below we have provided a list of previously used primary criteria as an example for you to formulate your own.
+      </p>
+      <ul>
+        <li>Geographic Proximity</li>
+        <li>Instructional (School) Capacity </li>
+        <li>Projected School Enrollment</li>
+      </ul>
     <h5>Secondary Criteria</h5>
+      <p>
+        Secondary criteria are also important to consider when deciding to create a redistricting alternative. Think of these criteria as things you think are important and that you would like to include in the design of your final plan, but they are not as necessary as the primary criteria. Secondary criteria are generally more specifici criteria. Below we have provided a list of examples.
+      </p>
+      <ul>
+        <li>Safety and Traffic Patterns</li>
+        <li>Previous Redistricting Patterns</li>
+        <li>Intact Neighborhoods</li>
+        <li>Equitable Access to Quality Programs</li>
+        <li>Condition of School Facility</li>
+        <li>School Feeder Alignment</li>
+        <li>Minimize Split Feeder Patterns</li>
+        <li>Minimize Distance Traveled to Schools</li>
+      </ul>
 
 
   </article>
