--- a/creating.html
+++ b/creating.html
@@ -113,9 +113,18 @@
 <div class="col-md-9">
  
   <article id="creating-the-redistricting-alternatives">
+    <h1>Creating the Redistricting Alternative</h1>
 
+    <h3>Things to Know Before Starting</h3>
 
-<!--content goes HERHEREREHREHRHERHHREHR -->
+    <h3>Collating the Data</h3>
+
+    <h3>Optimizing the Plan</h3>
+    <h5>Looking At the Bigger Picture</h5>
+
+    <h3>Presenting Your Proposal</h3>
+    <h3>Everything Else</h3>
+
 
 
   </article>
