changes to css and other html to get the content centered

--- a/creating.html
+++ b/creating.html
@@ -109,7 +109,7 @@
 </div> <!-- /col-md-3 -->
 
 <!-- Main content section -->
-<div class="col-md-9">
+<div class="col-md-6">
  
   <article id="creating-the-redistricting-alternatives">
     <h1>Creating the Redistricting Alternative</h1>
@@ -136,7 +136,7 @@
 
     <h3>Collating the Data</h3>
 
-    <h3>Optimizing the Plan</h3>
+    <h3>Setting Priorities</h3>
     <h5>Looking At the Bigger Picture</h5>
 
     <h3>Presenting Your Proposal</h3>
