change to data collection format

--- a/creating.html
+++ b/creating.html
@@ -137,7 +137,13 @@
     <h3>Collating the Data</h3>
 
     <h3>Setting Priorities</h3>
+      <p>
+        As mentioned in the Goal Formation and Clarification section, setting priorities in the form of goals and criteria are crucial to having a persuasive redistricting alternative. What everyone needs to remember before embarking on the path towards school redistricting is to look at the big picture. 
+      </p>
     <h5>Looking At the Bigger Picture</h5>
+      <p>
+        
+      </p>
 
     <h3>Presenting Your Proposal</h3>
       <h5>Tips and Important Considerations for Presenting Your Case</h5>
