--- a/dataCollection.html
+++ b/dataCollection.html
@@ -80,7 +80,32 @@
         </div><!--/.navbar-collapse -->
       </div>
     </div>
-	<div class="container">
+<!-- Sidebar navigation -->
+<!--
+<div class="container">
+<div class="row">
+<div class="col-md-3">
+  <ul class="nav" id="module-navigation" data-spy="affix">
+    <li><a href="#goal-formation-and-clarification">Goal Formation and Clarification</a></li>
+    <li><a href="#current-model-analysis">Current Model Analysis</a></li>
+    <li>
+      <a href="#data-collection">Data Collection</a>
+      <ul class="nav nav-submenu">
+        <li><a href="#">Traffic</a></li>
+        <li><a href="#">Population</a></li>
+        <li><a href="#">Bus Routes</a></li>
+        <li><a href="#">Geographic Distance</a></li>
+        <li><a href="#">Neighborhood Boundaries</a></li>
+      </ul>
+    </li>
+    <li><a href="#creating-the-redistricting-alternatives">Creating the Redistricting Alternative</a></li>
+    <li><a href="#community-involvment">Community Involvement</a></li>
+    <li><a href="#action-plan-implementation">Action Plan Implementation</a></li>
+  </ul> 
+</div> <!-- /col-md-3 -->
+
+<!-- Main content section -->
+<div class="col-md-6">
   
     <article id="data-collection">
 	<h1>Data Collection</h1>
