--- a/modules.html
+++ b/modules.html
@@ -89,10 +89,10 @@
 <div class="row">
 <div class="col-md-3">
   <ul class="nav" id="module-navigation" data-spy="affix">
-    <li><a href="#goal-formation-and-clarification">Goal Formation and Clarification</a></li>
+    <li><a href=goal.html>Goal Formation and Clarification</a></li>
     <li><a href="#current-model-analysis">Current Model Analysis</a></li>
     <li>
-      <a href="#data-collection">Data Collection</a>
+      <a href=dataCollection.html>Data Collection</a>
       <ul class="nav nav-submenu">
         <li><a href="#">Traffic</a></li>
         <li><a href="#">Population</a></li>
@@ -101,9 +101,8 @@
         <li><a href="#">Neighborhood Boundaries</a></li>
       </ul>
     </li>
-    <li><a href="#creating-the-redistricting-alternatives">Creating the Redistricting Alternative</a></li>
     <li><a href="#community-involvment">Community Involvement</a></li>
-    <li><a href="#action-plan-implementation">Action Plan Implementation</a></li>
+    <li><a href= creating.html>Creating the Redistricting Alternative</a></li>
   </ul> 
 </div> <!-- /col-md-3 -->
 
@@ -135,11 +134,7 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In interdum cursus tellus, at cursus nunc faucibus et. Nulla facilisi. Ut id porttitor libero. Sed sagittis sodales lorem, eget aliquet velit condimentum ut. Aliquam erat volutpat. Nam nisl lacus, feugiat vel augue sit amet, dapibus varius justo. Nam at pellentesque leo.</p>
     <p>Curabitur non arcu tincidunt, luctus lacus id, gravida eros. Sed ullamcorper dolor venenatis, accumsan dui id, pellentesque mauris. Phasellus elementum tellus quam, id luctus est imperdiet a. Vivamus vitae laoreet arcu, nec pharetra mauris. In scelerisque accumsan nibh, ac gravida massa fermentum ut. Proin enim leo, mollis ac massa ut, iaculis condimentum augue. Vivamus in facilisis ante, sit amet facilisis eros.</p>
   </article>
-  <article id="action-plan-implementation">
-    <h1>Action Plan Implementation</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In interdum cursus tellus, at cursus nunc faucibus et. Nulla facilisi. Ut id porttitor libero. Sed sagittis sodales lorem, eget aliquet velit condimentum ut. Aliquam erat volutpat. Nam nisl lacus, feugiat vel augue sit amet, dapibus varius justo. Nam at pellentesque leo.</p>
-    <p>Curabitur non arcu tincidunt, luctus lacus id, gravida eros. Sed ullamcorper dolor venenatis, accumsan dui id, pellentesque mauris. Phasellus elementum tellus quam, id luctus est imperdiet a. Vivamus vitae laoreet arcu, nec pharetra mauris. In scelerisque accumsan nibh, ac gravida massa fermentum ut. Proin enim leo, mollis ac massa ut, iaculis condimentum augue. Vivamus in facilisis ante, sit amet facilisis eros.</p>
-  </article>
+  
 </div> <!-- /col-md-9" -->
 </div> <!-- /row -->
 
