Fleshed out dataCollection module.

--- a/dataCollection.html
+++ b/dataCollection.html
@@ -97,24 +97,25 @@
 		</ul>
 	  </p>
 	<h3>Population</h3>
-	  <p><strong>Why is this important?</strong></p>
+	  <p><strong>Why is this important?</strong> This is possibly the most important data you can get. You should consider getting it on the levels of community, school attendance area, school enrollement, homeschooled students, schools going to a school not in their attendance area, etc.</p>
 	  <p><strong>Potential data sources</strong>
 	    <ul>
 		  <li><a href="https://www.census.gov/">The United States Census Bureau</a></li>
+		  <li>Crowd Source. It's going to be very difficult to get numbers that are accurate. You may have to ocntact several school officials.</li>
 		</ul>
 	  </p>
 	<h3>Bus Routes</h3>
-	  <p><strong>Why is this important?</strong></p>
+	  <p><strong>Why is this important?</strong> This data, inconjunction with the traffic data</p>
 	  <p><strong>Potential data sources</strong>
 	    <ul>
-		  <li>Google</li>
+		  <li>Crowd Source. It is likely that the school system you're in does not post bus routes. You may have to go to the schools themselves, get help from the bus drivers, or even the students.</li>
 		</ul>
 	  </p>
 	<h3>Geographic Distances</h3>
-	  <p><strong>Why is this important?</strong></p>
+	  <p><strong>Why is this important?</strong> This data can be used to determine how long commutes would be when a redistricting proposal sends your student to a new school.</p>
 	  <p><strong>Potential data sources</strong>
 	    <ul>
-		  <li>Google</li>
+		  <li>Google Maps.</li>
 		</ul>
 	  </p>
 	<h3>Neighborhood Boundaries</h3>
