--- a/community.html
+++ b/community.html
@@ -121,6 +121,8 @@
 
     <h3>Creating a Group</h3>
 
+    <p>If you are interested in creating a group </p>
+
     <h3>Other Types of Community Involvement</h3>
 
     <p>
