--- a/templates.html
+++ b/templates.html
@@ -86,16 +86,32 @@
     <article id="data-collection">
 	<h2>Data templates </h2>
 		<p class="lead">Send/Receive Table</p>
-		<p>The following template is designed to help you collect data about the schools in your district, by knowing how many students are moving from each school we can figure out which schools are going to be over capacity and which of them are under capacity. This knowledge will help you decide how to redistribute the population feeding into each school</p>
+		<p>The following template is designed to help you collect data about the schools in your district, by knowing how many students are moving from each school we can figure out which schools are going to be over capacity and which of them are under capacity. This knowledge will help you decide how to redistribute the population feeding into each school. Provided here with example data</p>
 		<iframe width="1200" height="600" frameborder="0" scrolling="no" src="https://skydrive.live.com/embed?cid=6914EC0D7C1F1D1E&resid=6914EC0D7C1F1D1E%21341&authkey=&em=2&wdAllowInteractivity=False"></iframe>
     </article>
 	<br>
 	<br>
-	<article id="data-collection">
+	<article id="talking-points">
 		<p class="lead">Talking Points</p>
-		<p>The following template is designed to help you collect the important talking points from the school associations in your neighborhood.</p>
+		<p>The following template is designed to help you collect the important talking points from the school associations in your neighborhood. Provided here with example data</p>
 		<iframe src="https://skydrive.live.com/embed?cid=6914EC0D7C1F1D1E&resid=6914EC0D7C1F1D1E%21675&authkey=AFnGoRmkTOtJ_Tc&em=2" width="1200" height="600" frameborder="0" scrolling="no"></iframe>
     </article>
+	<br>
+	<br>
+	<article id="Data Collection">
+		<p class="lead">Collection forms</p>
+		<p>The following document conatins example collection data from the Dekalb county</p>
+		<a href="docs/Collection.PDF">Collected Data</a>
+    </article>
+	<br>
+	<br>
+	<article id="Alternative Proposals">
+		<p class="lead">Collection forms</p>
+		<p>The following document conatins example collection data from the Dekalb county</p>
+		<a href="docs/Alternative.PDF">Alternate Proposal</a><br>
+		<a href="docs/Alternative2.PDF">Alternate Proposal 2</a>
+    </article>
+	
 </div>
 
 
