--- a/community.html
+++ b/community.html
@@ -182,13 +182,19 @@
 
     </p>
 
-    <h3 align="right"><a href="dataCollection.html">Up Next: Data Collection</a></h3>
+    <h4 align="right"><a href="dataCollection.html">Up Next: Data Collection</a></h4>
     <br>
 
   </article>
 
 </div> <!-- /col-md-9" -->
 </div> <!-- /row -->
+
+<div class="col-md-9">  
+    <hr>
+    <p>&copy; Fighting Mongooses (Georgia Institute of Technology) 2013</p>
+</div>
+
 
 <!-- Footer -->
 
