--- a/creating.html
+++ b/creating.html
@@ -180,6 +180,12 @@
 </div> <!-- /col-md-9" -->
 </div> <!-- /row -->
 
+<div class="col-md-9">  
+    <hr>
+    <p>&copy; Fighting Mongooses (Georgia Institute of Technology) 2013</p>
+</div>
+
+
 <!-- Footer -->
 
 </div> <!-- /container -->
