--- a/currentModel.html
+++ b/currentModel.html
@@ -144,12 +144,18 @@
       <p>An issue that you may run into along the way of creating an alternative districting plan is dealing with bureaucracy. This can come in the form of having difficulty getting information from your school district, or even not being able to schedule a meeting with the school board. Some of the best advice given on this issue is networking. If you are serious about getting all or part of your alternative plan implemented, at a certain point, as seen in past redistricting efforts, it comes down to who you know. So if you know your neighbor is friends with the cousin of the wife of someone involved in the redistricting committee, do not hestitate to try to get in contact with those people! With this process, any contact who is willing to advocate for you is better than none. </p>
     
 
-      <h3 align="right"><a href="community.html">Up Next: Community Involvement</a></h3>
+      <h4 align="right"><a href="community.html">Up Next: Community Involvement</a></h4>
       <br>
   </article>
 
 </div> <!-- /col-md-9" -->
 </div> <!-- /row -->
+
+<div class="col-md-9">  
+    <hr>
+    <p>&copy; Fighting Mongooses (Georgia Institute of Technology) 2013</p>
+</div>
+
 
 <!-- Footer -->
 
