--- a/dataCollection.html
+++ b/dataCollection.html
@@ -168,9 +168,15 @@
 	  </p>
     </article>
 
-      <h3 align="right"><a href="creating.html">Up Next: Creating the Redistricting Alternative</a></h3>
+      <h4 align="right"><a href="creating.html">Up Next: Creating the Redistricting Model</a></h4>
       <br>
 </div>
+
+<div class="col-md-9">  
+    <hr>
+    <p>&copy; Fighting Mongooses (Georgia Institute of Technology) 2013</p>
+</div>
+
 
 <footer>
 
