--- a/goal.html
+++ b/goal.html
@@ -189,18 +189,25 @@
 
   </article>
 
-  <h3 align="right"><a href="currentModel.html">Up Next: Current Model Analysis</a></h3>
+  <h4 align="right"><a href="currentModel.html">Up Next: Current Model Analysis</a></h4>
   <br>
+
 
 
 </div> <!-- /col-md-9" -->
 </div> <!-- /row -->
+
+<div class="col-md-9">  
+    <hr>
+    <p>&copy; Fighting Mongooses (Georgia Institute of Technology) 2013</p>
+</div>
 
 <!-- Footer -->
 
 <footer>
 
 <a href="#" class="go-top">Go Top</a>
+
 
 </footer>
 
