modified landing page

--- a/index.html
+++ b/index.html
@@ -77,19 +77,17 @@
       <!-- Example row of columns -->
       <div class="row">
         <div class="col-lg-4">
-          <h3>About School Redistricting</h3>
-          <p>What is school redistricting and how does it <br>affect you ?</p>
-          <p><a class="btn btn-default" href="about.html">View details &raquo;</a></p>
+          <h3>Data Templates</h3>
+          <p>Finding data is hard, recording it shouldn't be. Districtly provides you with relevant data collection examples and blank templates to make the 
+            process as easy as possible.</p>
+       </div>
+       <div class="col-lg-4">
+          <h3>Redistricting</h3>
+          <p>School redistricting can be overwhelming, but Districtly provides you will tools to overcome many obstacles.</p>
         </div>
         <div class="col-lg-4">
-          <h3>Data Templates</h3>
-          <p>Districtly provides data templates to help you collect your data, so you do not have to spend time creating useful forms from scratch.</p>
-          <p><a class="btn btn-default" href="templates.html">View details &raquo;</a></p>
-       </div>
-        <div class="col-lg-4">
-          <h3>Success Stories</h3>
-          <p>Read about people who have successfully contributed to improve their district's redistricting plans</p>
-          <p><a class="btn btn-default" href="successful.html">View details &raquo;</a></p>
+          <h3>Connect with Us</h3>
+          <p><a href="https://www.facebook.com/districtly"><img src="images/facebook.png"></a>&nbsp;<img src="images/twitter.png"></p>
         </div>
       </div>
 
